# project-time-manager

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  export.rs  main.rs  models.rs  pdf.rs  storage.rs  windows.rs
src-tauri/windows/: installer-template.nsi  nsis-hooks.nsh
src/components/: ProjectTimeline.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx  WaveBackground.tsx
src/components/ui/: HelpModal.tsx  PageHeader.tsx  PlaceholderPage.tsx
src/lib/: api.ts  i18n.ts  types.ts
src/pages/: AnalyticsPage.tsx  CategoriesPage.tsx  DashboardPage.tsx  MonitoringPage.tsx  ProjectWorkspace.tsx  SettingsPage.tsx
src/store/: AppState.tsx
