[package]
name = "project-time-manager"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = "2"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_xlsxwriter = "0.81"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
uuid = { version = "1", features = ["v4", "serde"] }
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }
